<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app ="http://schemas.android.com/apk/res-auto"
    xmlns:tools ="http://schemas.android.com/tools"
    tools:context="com.icu.yankiinsel.icu.Activities.HomeActivity">
    <item
        android:id ="@+id/action_home"
        android:orderInCategory="100"
        android:title ="@string/action_home"
        app:showAsAction="always">
    </item>
    <item
        android:id ="@+id/action_profile"
        android:orderInCategory="101"
        android:title ="@string/action_profile"
        app:showAsAction="always">
    </item>
    <item
        android:id ="@+id/action_matches"
        android:orderInCategory="102"
        android:title ="@string/action_matches"
        app:showAsAction="always">
    </item>
    <item
        android:id ="@+id/action_preferences"
        android:orderInCategory="199"
        android:title ="@string/action_preferences"
        app:showAsAction="never">
    </item>
</menu>