<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPrimary">

    <TextView
        android:id="@+id/label_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:fontFamily="@font/font_zeyada"
        android:textSize="64sp"
        android:text="ICU"
        android:layout_marginTop="64dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_email"
        android:layout_marginRight="64dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="64dp"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/label_logo"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/edit_password"
        android:layout_marginRight="64dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="64dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:imeOptions="actionNext"
        android:gravity="center">

    </EditText>

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        android:layout_marginRight="64dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="64dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        android:hint="@string/password"
        android:backgroundTint="@color/white"
        android:textColor="@color/white"
        android:textColorHint="@color/hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:gravity="center"
        android:ellipsize="start">

    </EditText>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/black"
        android:text="@string/signin"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/edit_password"/>

</android.support.constraint.ConstraintLayout>